RESOLVED FIXED164971
Fix exception scope verification failures in JSC profiler files.
https://bugs.webkit.org/show_bug.cgi?id=164971
Summary Fix exception scope verification failures in JSC profiler files.
Mark Lam
Reported 2016-11-18 16:57:16 PST
Patch coming.
Attachments
proposed patch. (9.72 KB, patch)
2016-11-18 17:02 PST, Mark Lam
no flags
proposed patch: updated to use return { } where possible. (10.52 KB, patch)
2016-11-21 12:05 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-18 17:02:11 PST
Created attachment 295225 [details] proposed patch.
Mark Lam
Comment 2 2016-11-21 12:05:23 PST
Created attachment 295310 [details] proposed patch: updated to use return { } where possible.
Saam Barati
Comment 3 2016-11-21 15:22:23 PST
Comment on attachment 295310 [details] proposed patch: updated to use return { } where possible. View in context: https://bugs.webkit.org/attachment.cgi?id=295310&action=review > Source/JavaScriptCore/profiler/ProfilerCompilation.cpp:120 > + RETURN_IF_EXCEPTION(scope, { }); Why not make these assertions in this file since this is only used for debugging?
Mark Lam
Comment 4 2016-11-22 12:48:21 PST
Comment on attachment 295310 [details] proposed patch: updated to use return { } where possible. View in context: https://bugs.webkit.org/attachment.cgi?id=295310&action=review >> Source/JavaScriptCore/profiler/ProfilerCompilation.cpp:120 >> + RETURN_IF_EXCEPTION(scope, { }); > > Why not make these assertions in this file since this is only used for debugging? We were already checking for some exceptions in this code before. In this patch, I'm filling out more exception checks. It might be appropriate to replace all these with assertions, but that would be a change in behavior. I'll stick with the exception checks for now. We can consider a change of behavior to use assertions later if desired.
Mark Lam
Comment 5 2016-11-22 12:52:51 PST
Thanks for the review. Landed in r208968: <http://trac.webkit.org/r208968>.
Note You need to log in before you can comment on or make changes to this bug.