Fix exception scope verification failures in JSC profiler files. https://bugs.webkit.org/show_bug.cgi?id=164971

Reviewed by Saam Barati.

* profiler/ProfilerBytecodeSequence.cpp:
(JSC::Profiler::BytecodeSequence::addSequenceProperties):
* profiler/ProfilerCompilation.cpp:
(JSC::Profiler::Compilation::toJS):
* profiler/ProfilerDatabase.cpp:
(JSC::Profiler::Database::toJS):
(JSC::Profiler::Database::toJSON):
* profiler/ProfilerOSRExitSite.cpp:
(JSC::Profiler::OSRExitSite::toJS):
* profiler/ProfilerOriginStack.cpp:
(JSC::Profiler::OriginStack::toJS):



Canonical link: https://commits.webkit.org/182676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208968 268f45cc-cd09-0410-ab3c-d52691b4dbfc