Source/JavaScriptCore/profiler/ProfilerCompilation.cpp
@@ -117,42 +117,60 @@ JSValue Compilation::toJS(ExecState* exec) const
     VM& vm = exec->vm();
     auto scope = DECLARE_THROW_SCOPE(vm);
     JSObject* result = constructEmptyObject(exec);
-    RETURN_IF_EXCEPTION(scope, JSValue());
+    RETURN_IF_EXCEPTION(scope, { });
     result->putDirect(vm, exec->propertyNames().bytecodesID, jsNumber(m_bytecodes->id()));
     result->putDirect(vm, exec->propertyNames().compilationKind, jsString(exec, String::fromUTF8(toCString(m_kind))));
     
     JSArray* profiledBytecodes = constructEmptyArray(exec, 0);
-    RETURN_IF_EXCEPTION(scope, JSValue());
-    for (unsigned i = 0; i < m_profiledBytecodes.size(); ++i)
-        profiledBytecodes->putDirectIndex(exec, i, m_profiledBytecodes[i].toJS(exec));
+    RETURN_IF_EXCEPTION(scope, { });
+    for (unsigned i = 0; i < m_profiledBytecodes.size(); ++i) {
+        auto value = m_profiledBytecodes[i].toJS(exec);
+        RETURN_IF_EXCEPTION(scope, { });
+        profiledBytecodes->putDirectIndex(exec, i, value);
+        RETURN_IF_EXCEPTION(scope, { });
+    }
     result->putDirect(vm, exec->propertyNames().profiledBytecodes, profiledBytecodes);
     
     JSArray* descriptions = constructEmptyArray(exec, 0);
-    RETURN_IF_EXCEPTION(scope, JSValue());
-    for (unsigned i = 0; i < m_descriptions.size(); ++i)
-        descriptions->putDirectIndex(exec, i, m_descriptions[i].toJS(exec));
+    RETURN_IF_EXCEPTION(scope, { });
+    for (unsigned i = 0; i < m_descriptions.size(); ++i) {
+        auto value = m_descriptions[i].toJS(exec);
+        RETURN_IF_EXCEPTION(scope, { });
+        descriptions->putDirectIndex(exec, i, value);
+        RETURN_IF_EXCEPTION(scope, { });
+    }
     result->putDirect(vm, exec->propertyNames().descriptions, descriptions);
     
     JSArray* counters = constructEmptyArray(exec, 0);
-    RETURN_IF_EXCEPTION(scope, JSValue());
+    RETURN_IF_EXCEPTION(scope, { });
     for (auto it = m_counters.begin(), end = m_counters.end(); it != end; ++it) {
         JSObject* counterEntry = constructEmptyObject(exec);
-        counterEntry->putDirect(vm, exec->propertyNames().origin, it->key.toJS(exec));
+        RETURN_IF_EXCEPTION(scope, { });
+        auto value = it->key.toJS(exec);
+        RETURN_IF_EXCEPTION(scope, { });
+        counterEntry->putDirect(vm, exec->propertyNames().origin, value);
         counterEntry->putDirect(vm, exec->propertyNames().executionCount, jsNumber(it->value->count()));
         counters->push(exec, counterEntry);
+        RETURN_IF_EXCEPTION(scope, { });
     }
     result->putDirect(vm, exec->propertyNames().counters, counters);
     
     JSArray* exitSites = constructEmptyArray(exec, 0);
-    RETURN_IF_EXCEPTION(scope, JSValue());
-    for (unsigned i = 0; i < m_osrExitSites.size(); ++i)
-        exitSites->putDirectIndex(exec, i, m_osrExitSites[i].toJS(exec));
+    RETURN_IF_EXCEPTION(scope, { });
+    for (unsigned i = 0; i < m_osrExitSites.size(); ++i) {
+        auto value = m_osrExitSites[i].toJS(exec);
+        RETURN_IF_EXCEPTION(scope, { });
+        exitSites->putDirectIndex(exec, i, value);
+        RETURN_IF_EXCEPTION(scope, { });
+    }
     result->putDirect(vm, exec->propertyNames().osrExitSites, exitSites);
     
     JSArray* exits = constructEmptyArray(exec, 0);
-    RETURN_IF_EXCEPTION(scope, JSValue());
-    for (unsigned i = 0; i < m_osrExits.size(); ++i)
+    RETURN_IF_EXCEPTION(scope, { });
+    for (unsigned i = 0; i < m_osrExits.size(); ++i) {
         exits->putDirectIndex(exec, i, m_osrExits[i].toJS(exec));
+        RETURN_IF_EXCEPTION(scope, { });
+    }
     result->putDirect(vm, exec->propertyNames().osrExits, exits);
     
     result->putDirect(vm, exec->propertyNames().numInlinedGetByIds, jsNumber(m_numInlinedGetByIds));
